Fixed code after merge. Still bad result